--- a/JavaApplication103/nbproject/project.properties
+++ b/JavaApplication103/nbproject/project.properties
@@ -32,7 +32,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.JDateChooser.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
